# corporate-intelliops-system

./: .gitignore  CLAUDE.md  README.md  ROADMAP.md  agent.py  langgraph.json  pyproject.toml  tools.py
backend/: agent.py  api.py
backend/prompts/: orchestrator_agent_instructions.md
examples/: final_report.md
frontend/app/: app.py
frontend/app/pages/: home.py  info.py  research.py
prompts/: crawling_agent_instructions.md  extracting_agent_instructions.md  orchestrator_agent_instructions.md  research_agent_instructions.md  subagent_delegation_instructions.md
