[project]
name = "deep-agent-v1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepagents>=0.4.10",
    "langsmith>=0.7.16",
    "markdown>=3.10.2",
    "markdownify>=1.2.2",
    "pydantic>=2.12.5",
    "tavily>=1.1.0",
]
